# rusty-micrograd

./: Cargo.toml  micrograd-rs.ipynb
plots/: backprop.dot  backprop_ops.dot  binary_classifier.dot  graph.dot  mlp.dot
src/: engine.rs  graph.rs  main.rs  mlp.rs  neuron.rs
