[package]
name = "rusty-micrograd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand  = "0.8.5"
# showata = "0.3.2"
plotters = "0.3.5"
ndarray = "0.15.6"
# ndarray
# plotpy
# plotters

uuid = { version = "1.8.0", features = ["v4"] }
petgraph = "0.5.1"
petgraph-evcxr = "0.2.0"
